# ai_agent_demo

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
agent/: agent.py
agent/tools/: llm.py  registry.py
experiments/01172025_jackie_initial_agent/: test_agent.py  test_registry.py
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
src/experiments/01172025_jackie_initial_agent/: test_amadeus.py  test_backend.py
src/travel_agent/: db.sqlite3
src/travel_agent/agent/: agent.py
src/travel_agent/core/: urls.py  views.py
src/travel_agent/frontend/: package-lock.json
src/travel_agent/frontend/app/: page.tsx
src/travel_agent/tools/: amadeus.py
src/travel_agent/travel_agent/: asgi.py  settings.py  urls.py  wsgi.py
travel_agent/: settings.py  urls.py
travel_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
travel_agent/core/: apps.py  models.py  urls.py  views.py
travel_agent/core/migrations/: 0001_initial.py
travel_agent_ui/: package.json
travel_agent_ui/app/: page.tsx
utils/: agent.py  agent_old.py  llm.py  registry.py  tools.py
